# TeamCowboyApi-Python

./: LICENSE  README.md  pyproject.toml
.github/workflow/: build-and-test.yml  pre-merge-test.yml
.github/workflows/: build-and-test.yml  pre-merge-test.yml
teamcowboyapi/: __init__.py  exceptions.py  tc_api.py  tc_dataadapter.py  tc_helpers.py
teamcowboyapi/objects/activitys/: activity.py
teamcowboyapi/objects/attendances/: __init__.py  attendancelist.py
teamcowboyapi/objects/authuser/: __init__.py  authuser.py
teamcowboyapi/objects/colorswatches/: __init__.py  colorswatch.py
teamcowboyapi/objects/errors/: __init__.py  error.py
teamcowboyapi/objects/events/: __init__.py  event.py  rsvpinstance.py  saversvpresponce.py
teamcowboyapi/objects/leagues/: league.py
teamcowboyapi/objects/locations/: location.py
teamcowboyapi/objects/messages/: __init__.py  message.py  messagecomment.py  postedby.py
teamcowboyapi/objects/photos/: __init__.py  profilephoto.py
teamcowboyapi/objects/seasons/: __init__.py  season.py
teamcowboyapi/objects/teams/: __init__.py  team.py  teammembertype.py
teamcowboyapi/objects/tests/: __init__.py  test.py
teamcowboyapi/objects/users/: __init__.py  linkeduser.py  user.py  usermetainfo.py
tests/live_tests/: test_tcapi.py
